--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,8 +11,9 @@
     <color name="query">#FFCCCCDD</color>
     <color name="query2">#FFBBBBCC</color>
     <color name="orange">#FFFF8800</color>
+    <color name="orange_s">#FFDD6600</color>
     <color name="green_h">#FFAAFF66</color>
-    <color name="green_p">#FF55FF55</color>
+    <color name="green_p">#FF55DD55</color>
     <color name="green_s">#FF448844</color>
     <color name="sky_p">#FF6688FF</color>
     <color name="sky_s">#FF4466FF</color>
